--- a/src/app/maintenance/maintenance-history/maintenance-history.component.html
+++ b/src/app/maintenance/maintenance-history/maintenance-history.component.html
@@ -18,25 +18,26 @@
             <th>Sede</th>
             <th>Ultimo Chequeo</th>
             <th>Referencia</th>
+            <th>Estado</th>
           </tr>
         </thead>
         <tbody>
-          <ng-container *ngFor="let resource of (resources$|async)?.maintenances; let i = index;">
+          <ng-container *ngFor="let checkOut of (resources$|async)?.maintenances; let i = index;">
             <tr [ngClass]="{'bg-gray-200': i % 2 === 0}" class="text-center">
               <td class="p-2">
                 <span>
-                  {{resource.createdAt|date}}
+                  {{checkOut.createdAt|date}}
                 </span>
               </td>
               <td class="p-2"> <span>
-                  {{calcDays(resource.createdAt)}}
+                  {{calcDays(checkOut.createdAt)}}
                 </span>
               </td>
-              <td class="p-2"> {{resource.resource?.client}} </td>
-              <td class="p-2"> {{resource.resource?.office}} </td>
+              <td class="p-2"> {{checkOut.resource?.client}} </td>
+              <td class="p-2"> {{checkOut.resource?.office}} </td>
               <!-- ultimo chequeo -->
               <td class="p-2 justify-center flex">
-                <button class="btn-primary hover:bg-green-900" (click)="openLastCheckup(resource, resource.id)">
+                <button class="btn-primary hover:bg-green-900" (click)="openLastCheckup(checkOut, checkOut.id)">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24"
                     stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -44,7 +45,11 @@
                   </svg>
                 </button>
               </td>
-              <td class="p-2"> {{resource.resource?.reference}} </td>
+              <td class="p-2"> {{checkOut.resource?.reference}} </td>
+              <!-- Estado -->
+              <td class="p-2">
+                {{checkOut.resource && checkOut.resource.status? resourceStatusNames[checkOut.resource.status] : ''}}
+              </td>
             </tr>
           </ng-container>
 
