--- a/src/app/approvals/approvals-pending/approvals-pending.component.html
+++ b/src/app/approvals/approvals-pending/approvals-pending.component.html
@@ -18,6 +18,7 @@
             <th>Sede</th>
             <th>Ultimo Chequeo</th>
             <th>Referencia</th>
+            <th>Estado</th>
             <th>Acciones</th>
           </tr>
         </thead>
@@ -44,7 +45,7 @@
               <!-- ultimo chequeo -->
               <td class="p-2 justify-center flex">
                 <button class="btn-primary hover:bg-green-900"
-                  (click)="openLastCheckup(resource.checkups[resource.checkups.length-2], resource.id)">
+                  (click)="openLastCheckup(resource.maintenances[resource.maintenances.length-1], resource.id)">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24"
                     stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -53,6 +54,10 @@
                 </button>
               </td>
               <td class="p-2"> {{resource.reference}} </td>
+              <!-- Estado -->
+              <td class="p-2">
+                {{resource.status? resourceStatusNames[resource.status] : ''}}
+              </td>
               <!-- Acciones -->
               <td class="justify-center flex p2">
                 <button class="btn-primary hover:bg-green-900"
