--- a/src/app/check-ups/check-ups-pending/check-ups-pending.component.html
+++ b/src/app/check-ups/check-ups-pending/check-ups-pending.component.html
@@ -18,6 +18,7 @@
             <th>Sede</th>
             <th>Ultimo Chequeo</th>
             <th>Referencia</th>
+            <th>Estado</th>
             <th>Acciones</th>
           </tr>
         </thead>
@@ -40,6 +41,7 @@
                 </button>
               </td>
               <td class="p-2"> {{resource.reference}} </td>
+              <td class="p-2"> {{resource.status? resourceStatusNames[resource.status] : ''}} </td>
               <!-- Acciones -->
               <td class="justify-center flex p2">
                 <button class="btn-primary hover:bg-green-900"
