--- a/src/app/components/molecules/component-commentary-modal/component-commentary-modal/component-commentary-modal.component.html
+++ b/src/app/components/molecules/component-commentary-modal/component-commentary-modal/component-commentary-modal.component.html
@@ -24,7 +24,8 @@
             <td class="p-2"> {{component.componentName}} </td>
             <td class="p-2">
               <!-- Commentary -->
-              <textarea (ngModelChange)="checkUpForm.controls[i]?.get('comment')?.setValue($event)" required>
+              <textarea (change)="changeCommentary($event, i)" required
+                [value]="checkUpForm.controls[i]?.get('comment')?.value">
               </textarea>
             </td>
           </tr>
