feat: Add 'no mantenimientos', 'no reparaciones', 'no aprobaciones' y 'no chequeos' text in modules and add 'no tipo de recursos', 'no recursos' and create button in modules. fix: Bugfix adminclient module create redirect fix: Change create document title fix: Correct orthography 'aprovaciones' by 'aprobaciones'

--- a/src/app/approvals/approvals-pending-repair/approvals-pending-repair.component.html
+++ b/src/app/approvals/approvals-pending-repair/approvals-pending-repair.component.html
@@ -108,6 +108,13 @@
   </div>
   <!-- End Mobile Table -->
 
+  <!-- No Resources -->
+  <div *ngIf="((resources$ |async)?.length === 0) && !(loader$ | async) && page === 1"
+    class="flex flex-col items-center justify-center w-full h-full space-y-4">
+    <p>No hay aprobaciones pendientes</p>
+  </div>
+  <!-- End No Resources -->
+
 </div>
 
 <app-check-up-modal [checkup]="checkup" [showBackDrop]="showBackDropL" [showModal]="showModalL"
