--- a/src/app/resources/add-document-modal/add-document-modal.component.html
+++ b/src/app/resources/add-document-modal/add-document-modal.component.html
@@ -1,7 +1,7 @@
 <app-modal [showBackDrop]="showBackDrop" [showModal]="showModal">
   <!-- Header -->
   <div class="px-4 pt-5 pb-4 bg-brand sm:p-6 sm:pb-4">
-    <h1 class="text-xl text-white sm:text-3xl">Crear nuevo componente</h1>
+    <h1 class="text-xl text-white sm:text-3xl">Crear nuevo documento</h1>
   </div>
 
   <!-- Body -->
