--- a/src/app/clients/office-form/office-form.component.html
+++ b/src/app/clients/office-form/office-form.component.html
@@ -1,3 +1,4 @@
+<app-back-arrow backRoute="clientes"></app-back-arrow>
 <div class="flex flex-col items-center justify-center w-full h-full space-y-4">
   <!-- Form Container -->
   <div class="flex flex-col items-center justify-center w-full">
