--- a/src/app/clients/offices-list/offices-list.component.html
+++ b/src/app/clients/offices-list/offices-list.component.html
@@ -1,3 +1,4 @@
+<app-back-arrow backRoute="clientes"></app-back-arrow>
 <div class="flex flex-col items-center justify-center h-full space-y-4 py-14 sm:w-full">
   <!-- No Team Members -->
   <div *ngIf="client.offices?.length === 0" class="flex flex-col items-center justify-center w-full h-full space-y-4">
