--- a/src/app/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/inventory/inventory-list/inventory-list.component.html
@@ -14,7 +14,7 @@
           <label class="text-gray-400" for="client-admin">Tipo de recurso:</label>
           <select [(ngModel)]="resourceTypeId"
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
-            name="resource-type" id="resource-type">
+            name="resource-type" id="resource-type" (ngModelChange)="filterResources()">
             <option [ngValue]="''">
               Todos
             </option>
@@ -28,24 +28,41 @@
 
         <!-- Client -->
         <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4">
-          <label class="text-gray-400" for="client">Cliente:</label>
-          <input name="client" [(ngModel)]="client"
-            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full" type="text">
+          <label class="text-gray-400" for="client">* Cliente:</label>
+          <select name="client" [(ngModel)]="client" id="client" (ngModelChange)="selectClient()"
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full">
+            <option [value]="''">Todos</option>
+            <ng-container *ngFor="let client of clients$ | async">
+              <option [ngValue]="client.name">
+                {{client.name}}
+              </option>
+            </ng-container>
+          </select>
         </div>
+
+        <!-- <div class="flex flex-col w-full h-16 my-3 sm:my-0">
+        </div> -->
       </div>
 
       <div class="flex flex-col sm:flex-row w-full">
         <!-- office -->
         <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4">
-          <label class="text-gray-400" for="office">Sede:</label>
-          <input name="office" [(ngModel)]="office"
-            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full" type="text">
+          <label class="text-gray-400" for="office">* Sede:</label>
+          <select name="office" [(ngModel)]="office" required id="office" (ngModelChange)="filterResources()"
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full">
+            <ng-container *ngIf="clientSelected !== undefined && clientSelected !== null">
+              <option [value]="''">Todos</option>
+              <option [ngValue]="office.name" *ngFor="let office of clientSelected.offices">
+                {{office.name}}
+              </option>
+            </ng-container>
+          </select>
         </div>
 
         <!-- state -->
         <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4">
           <label class="text-gray-400" for="client-admin">Estado:</label>
-          <select [(ngModel)]="state"
+          <select [(ngModel)]="state" (ngModelChange)="filterResources()"
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
             name="resource-type" id="resource-type">
             <option [value]="''">Todos</option>
@@ -65,11 +82,11 @@
       </div>
 
 
-      <div class="flex w-full items-end justify-center flex-1">
+      <!-- <div class="flex w-full items-end justify-center flex-1">
         <button class="btn-primary hover:bg-green-900 h-12" type="submit" (click)="filterResources()">
           Filtrar
         </button>
-      </div>
+      </div> -->
 
     </div>
 
