--- a/src/app/inventory/inventory/inventory.component.html
+++ b/src/app/inventory/inventory/inventory.component.html
@@ -13,13 +13,33 @@
     </div>
     <!-- End Title -->
     <!-- Add Client Btn -->
-    <button *ngIf="showAddBtn" routerLink="nuevo-recurso" class="btn-primary hover:bg-green-900">
-      <span class="hidden sm:flex">Crear nuevo recurso</span>
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-      </svg>
-    </button>
+    <div class="flex flex-row">
+      <!-- Download button -->
+      <button *ngIf="showAddBtn" (click)="onDownloadExcel()" class="btn-primary hover:bg-green-900 mx-5"
+        [disabled]="downloading" [ngClass]="{'opacity-40 cursor-wait': downloading}">
+        <span class="hidden sm:flex">Descargar</span>
+        <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
+          *ngIf="downloading" viewBox="0 0 24 24">
+          <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+          <path class="opacity-75" fill="currentColor"
+            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+          </path>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+          *ngIf="!downloading">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
+        </svg>
+      </button>
+      <!-- Add new resource button -->
+      <button *ngIf="showAddBtn" routerLink="nuevo-recurso" class="btn-primary hover:bg-green-900">
+        <span class="hidden sm:flex">Crear nuevo recurso</span>
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+      </button>
+    </div>
     <!-- End Add Client Btn -->
   </div>
   <!-- BODY -->
