--- a/src/app/maintenance/maintenance-history/maintenance-history.component.html
+++ b/src/app/maintenance/maintenance-history/maintenance-history.component.html
@@ -8,7 +8,7 @@
 
     <div class="flex flex-col mb-4 w-full">
 
-      <table *ngIf="((resources$ |async)?.maintenances?.length !== 0)"
+      <table
         class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg overflow-x-scroll overflow-y-scroll">
         <thead>
           <tr>
