--- a/src/app/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/inventory/inventory-list/inventory-list.component.html
@@ -28,7 +28,7 @@
 
         <!-- Client -->
         <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4">
-          <label class="text-gray-400" for="client">* Cliente:</label>
+          <label class="text-gray-400" for="client">Cliente:</label>
           <select name="client" [(ngModel)]="client" id="client" (ngModelChange)="selectClient()"
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full">
             <option [value]="''">Todos</option>
@@ -47,7 +47,7 @@
       <div class="flex flex-col sm:flex-row w-full">
         <!-- office -->
         <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4">
-          <label class="text-gray-400" for="office">* Sede:</label>
+          <label class="text-gray-400" for="office">Sede:</label>
           <select name="office" [(ngModel)]="office" required id="office" (ngModelChange)="filterResources()"
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full">
             <ng-container *ngIf="clientSelected !== undefined && clientSelected !== null">
@@ -93,6 +93,7 @@
     <table class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg overflow-x-scroll overflow-y-scroll">
       <thead>
         <tr>
+          <th></th>
           <th>Tipo</th>
           <th>Referencia</th>
           <th>Código Qr</th>
@@ -108,6 +109,13 @@
       <tbody>
         <ng-container *ngFor="let resource of (resources$|async); let i = index;">
           <tr [ngClass]="{'bg-gray-200': i % 2 === 0}" class="text-center">
+            <td class="p-2">
+              <label class="flex items-center space-x-3" for="checked">
+                <input name="checked" type="checkbox" class="form-tick appearance-none h-6 w-6 border border-gray-300 rounded-md checked:border-brand checked:border-transparent focus:outline-none
+                  checked:bg-brand focus:bg-brand cursor-pointer" (change)="changeChecked(i)"
+                  [checked]="resource.checked">
+              </label>
+            </td>
             <td class="p-2"> {{resource.type}} </td>
             <td class="p-2"> {{resource.reference}} </td>
             <td class="p-2">
