--- a/src/app/inventory/inventory/inventory.component.html
+++ b/src/app/inventory/inventory/inventory.component.html
@@ -33,6 +33,15 @@
             d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
         </svg>
       </button>
+      <!-- Checked button -->
+      <button *ngIf="showAddBtn" (click)="createCheckup()" class="btn-primary hover:bg-green-900 mx-5"
+        [disabled]="downloading" [ngClass]="{'opacity-40 cursor-wait': downloading}">
+        <span class="hidden sm:flex">Chequeo</span>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+      </button>
       <!-- Add new resource button -->
       <button *ngIf="showAddBtn" routerLink="nuevo-recurso" class="btn-primary hover:bg-green-900">
         <span class="hidden sm:flex">Crear nuevo recurso</span>
@@ -51,3 +60,7 @@
   </div>
 </div>
 <!-- End Main Container -->
+
+<app-confirm-modal [showBackDrop]="showBackDrop" [showModal]="showModal"
+  question="¿Desea mandar los recursos a chequeo?" header="Confirmar" (close)="onCloseModal($event)">
+</app-confirm-modal>
