--- a/src/app/inventory/inventory/inventory.component.html
+++ b/src/app/inventory/inventory/inventory.component.html
@@ -17,6 +17,40 @@
     <!-- Add Client Btn -->
     <div class="flex flex-col xl:flex-row">
       <div class="flex flex-row justify-start">
+        <!-- Checked button -->
+        <button *ngIf="showAddBtn" (click)="createCheckup()" class="btn-primary hover:bg-green-900 mx-5 my-5 xl:my-0"
+          [ngClass]="{'opacity-40 cursor-not-allowed': activeAndCheckedResources.length === 0}"
+          [disabled]="activeAndCheckedResources.length === 0">
+          <span class="hidden sm:flex">Chequeo</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </button>
+        <!-- Maintenance button -->
+        <button *ngIf="showAddBtn" (click)="createMaintenance()"
+          class="btn-primary hover:bg-green-900 mx-5 my-5 xl:my-0"
+          [ngClass]="{'opacity-40 cursor-not-allowed': activeAndCheckedResources.length === 0}"
+          [disabled]="activeAndCheckedResources.length === 0">
+          <span class="hidden sm:flex">Mantenimiento</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </button>
+      </div>
+
+      <div class="flex flex-row justify-start">
+        <!-- Change key button -->
+        <button *ngIf="showAddBtn" (click)="changeLockerPass()" class="btn-primary hover:bg-green-900 mx-5 my-5 xl:my-0"
+          [ngClass]="{'opacity-40 cursor-not-allowed': checkedResources.length === 0}"
+          [disabled]="checkedResources.length === 0">
+          <span class="hidden sm:flex">Cambiar clave</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
+          </svg>
+        </button>
         <!-- Download button -->
         <button *ngIf="showAddBtn" (click)="onDownloadExcel()" class="btn-primary hover:bg-green-900 mx-5 my-5 xl:my-0"
           [disabled]="downloading" [ngClass]="{'opacity-40 cursor-wait': downloading}">
@@ -32,36 +66,6 @@
             *ngIf="!downloading">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
-          </svg>
-        </button>
-        <!-- Checked button -->
-        <button *ngIf="showAddBtn" (click)="createCheckup()" class="btn-primary hover:bg-green-900 mx-5 my-5 xl:my-0"
-          [ngClass]="{'opacity-40 cursor-wait': downloading}">
-          <span class="hidden sm:flex">Chequeo</span>
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-          </svg>
-        </button>
-      </div>
-
-      <div class="flex flex-row justify-start">
-        <!-- Maintenance button -->
-        <button *ngIf="showAddBtn" (click)="createMaintenance()"
-          class="btn-primary hover:bg-green-900 mx-5 my-5 xl:my-0" [ngClass]="{'opacity-40 cursor-wait': downloading}">
-          <span class="hidden sm:flex">Mantenimiento</span>
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-          </svg>
-        </button>
-        <!-- Change key button -->
-        <button *ngIf="showAddBtn" (click)="createCheckup()" class="btn-primary hover:bg-green-900 mx-5 my-5 xl:my-0"
-          [ngClass]="{'opacity-40 cursor-wait': downloading}">
-          <span class="hidden sm:flex">Cambiar clave</span>
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
           </svg>
         </button>
       </div>
