--- a/src/app/components/molecules/component-commentary-modal/component-commentary-modal/component-commentary-modal.component.html
+++ b/src/app/components/molecules/component-commentary-modal/component-commentary-modal/component-commentary-modal.component.html
@@ -16,6 +16,11 @@
       <thead>
         <tr>
           <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -23,10 +28,50 @@
           <tr [ngClass]="{'bg-gray-200': i % 2 === 0}" class="text-center">
             <td class="p-2"> {{component.componentName}} </td>
             <td class="p-2">
+              <!-- bad -->
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 cursor-pointer" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor"
+                [ngClass]="{'text-red-500': checkUpForm.controls[i]?.get('status')?.value === componentStatus.Bad}"
+                (click)="checkUpForm.controls[i]?.get('status')?.setValue(componentStatus.Bad)">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+            </td>
+            <td class="p-2">
+              <!-- Regular -->
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 cursor-pointer" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor"
+                [ngClass]="{'text-yellow-400':checkUpForm.controls[i]?.get('status')?.value === componentStatus.Regular}"
+                (click)="checkUpForm.controls[i]?.get('status')?.setValue(componentStatus.Regular)">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+            </td>
+            <td class="p-2">
+              <!-- Good -->
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 cursor-pointer" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor"
+                [ngClass]="{'text-brand':checkUpForm.controls[i]?.get('status')?.value  === componentStatus.Good}"
+                (click)="checkUpForm.controls[i]?.get('status')?.setValue(componentStatus.Good)">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+            </td>
+            <td class="p-2">
               <!-- Commentary -->
               <textarea (change)="changeCommentary($event, i)" required
                 [value]="checkUpForm.controls[i]?.get('comment')?.value">
               </textarea>
+            </td>
+            <td class="p-2">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 cursor-pointer" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor" (click)="openCamera('photo-'+i)"
+                [ngClass]="{'text-brand':checkUpForm.controls[i]?.get('photo')?.value}">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
+              </svg>
+              <input type="file" class="absolute" [id]="'photo-'+i" accept="image/*"
+                (change)="onFileSelected($event, i)">
             </td>
           </tr>
         </ng-container>
