--- a/src/app/maintenance/maintenance-pending/maintenance-pending.component.html
+++ b/src/app/maintenance/maintenance-pending/maintenance-pending.component.html
@@ -1,35 +1,16 @@
 <div class="flex flex-col items-center justify-center space-y-4 py-14 px-4 sm:w-full h-full mt-4">
 
-  <!-- Loader -->
-  <app-loader *ngIf="(loader$ |async)"></app-loader>
 
   <!-- Resources Table Desktop only -->
-  <div class="flow-root h-full w-full" *ngIf="!(loader$ | async)">
+  <div class="flow-root h-full w-full">
 
     <div class="flex flex-col mb-4 w-full">
 
       <div class="flex flex-col mb-4 w-11/12 lg:w-10/12 lg:flex-row">
 
         <div class="flex flex-col sm:flex-row w-full">
-          <!-- Resource type -->
-          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4">
-            <label class="text-gray-400" for="client-admin">Tipo de recurso:</label>
-            <select [(ngModel)]="resourceTypeId"
-              class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
-              name="resource-type" id="resource-type" (ngModelChange)="filterResources()">
-              <option [ngValue]="''">
-                Todos
-              </option>
-              <ng-container *ngFor="let resourceType of resourcesTypes$ | async">
-                <option [ngValue]="resourceType.type">
-                  {{resourceType.type}}
-                </option>
-              </ng-container>
-            </select>
-          </div>
-
           <!-- Client -->
-          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4">
+          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
             <label class="text-gray-400" for="client">Cliente:</label>
             <select name="client" [(ngModel)]="client" id="client" (ngModelChange)="selectClient()"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full">
@@ -41,12 +22,8 @@
               </ng-container>
             </select>
           </div>
-
-        </div>
-
-        <div class="flex flex-col sm:flex-row w-full">
           <!-- office -->
-          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4">
+          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
             <label class="text-gray-400" for="office">Sede:</label>
             <select name="office" [(ngModel)]="office" required id="office" (ngModelChange)="filterResources()"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full">
@@ -58,8 +35,39 @@
               </ng-container>
             </select>
           </div>
-          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4"></div>
         </div>
+
+        <div class="flex flex-col sm:flex-row w-full">
+          <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-full sm:w-1/2">
+            <div class="w-1/2 mr-3">
+              <label class="text-gray-400" for="from">Desde:</label>
+              <input name="from" [(ngModel)]="from"
+                class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
+                type="date">
+            </div>
+            <div class="w-1/2">
+              <label class="text-gray-400" for="to">Hasta:</label>
+              <input name="to" [(ngModel)]="to"
+                class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
+                type="date">
+            </div>
+          </div>
+          <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-1/2">
+            <!-- Reference -->
+            <div>
+              <label class="text-gray-400" for="reference">Referencia:</label>
+              <input name="reference" [(ngModel)]="reference"
+                class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
+            </div>
+            <!-- Filter button -->
+            <div class="flex items-end">
+              <button class="btn-primary hover:bg-green-900 mx-5 xl:my-0" (click)="filterResources()">
+                <span>Filtrar</span>
+              </button>
+            </div>
+          </div>
+        </div>
+
       </div>
 
       <table
@@ -80,17 +88,17 @@
           <ng-container *ngFor="let resource of (resources$|async); let i = index;">
             <tr [ngClass]="{'bg-gray-200': i % 2 === 0}" class="text-center">
               <td class="p-2">
-                <span *ngIf="resource.checkups.length">
-                  {{resource.checkups[resource.checkups.length-1].createdAt|date}}
+                <span *ngIf="resource.maintenances.length">
+                  {{resource.maintenances[resource.maintenances.length-1].createdAt|date}}
                 </span>
-                <span *ngIf="!resource.checkups.length">
+                <span *ngIf="!resource.maintenances.length">
                   ---
                 </span>
               </td>
-              <td class="p-2"> <span *ngIf="resource.checkups.length">
-                  {{calcDays(resource.checkups[resource.checkups.length-1].createdAt)}}
+              <td class="p-2"> <span *ngIf="resource.maintenances.length">
+                  {{calcDays(resource.maintenances[resource.maintenances.length-1].createdAt)}}
                 </span>
-                <span *ngIf="!resource.checkups.length">
+                <span *ngIf="!resource.maintenances.length">
                   0
                 </span>
               </td>
@@ -127,9 +135,13 @@
               </td>
             </tr>
           </ng-container>
-
         </tbody>
       </table>
+
+      <!-- Loader -->
+      <div class="w-full justify-center h-96" *ngIf="loader$|async">
+        <app-loader></app-loader>
+      </div>
 
       <div class="justify-end flex-row flex">
         Pag. {{page}}
