--- a/src/app/maintenance/maintenance-pending/maintenance-pending.component.html
+++ b/src/app/maintenance/maintenance-pending/maintenance-pending.component.html
@@ -6,8 +6,8 @@
 
     <div class="flex flex-col mb-4 w-full">
 
+      <!-- Filters -->
       <div class="flex flex-col mb-4 w-11/12 lg:w-10/12 lg:flex-row">
-
         <div class="flex flex-col sm:flex-row w-full">
           <!-- Client -->
           <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
@@ -67,8 +67,8 @@
             </div>
           </div>
         </div>
-
       </div>
+      <!-- End filters -->
 
       <table
         class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg overflow-x-scroll overflow-y-scroll">
