--- a/src/app/repair/repair-pending/repair-pending.component.html
+++ b/src/app/repair/repair-pending/repair-pending.component.html
@@ -1,14 +1,78 @@
 <div class="flex flex-col items-center justify-center space-y-4 py-14 px-4 sm:w-full h-full mt-4">
 
-  <!-- Loader -->
-  <app-loader *ngIf="(loader$ |async)"></app-loader>
 
   <!-- Resources Table Desktop only -->
-  <div class="flow-root h-full w-full" *ngIf="!(loader$ | async)">
+  <div class="flow-root h-full w-full">
 
     <div class="flex flex-col mb-4 w-full">
 
-      <table *ngIf="((resources$ |async)?.length !== 0)"
+
+      <!-- Filters -->
+      <div class="flex flex-col mb-4 w-11/12 lg:w-10/12 lg:flex-row">
+        <div class="flex flex-col sm:flex-row w-full">
+          <!-- Client -->
+          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
+            <label class="text-gray-400" for="client">Cliente:</label>
+            <select name="client" [(ngModel)]="client" id="client" (ngModelChange)="selectClient()"
+              class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full">
+              <option [value]="''">Todos</option>
+              <ng-container *ngFor="let client of clients$ | async">
+                <option [ngValue]="client.name">
+                  {{client.name}}
+                </option>
+              </ng-container>
+            </select>
+          </div>
+          <!-- office -->
+          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
+            <label class="text-gray-400" for="office">Sede:</label>
+            <select name="office" [(ngModel)]="office" required id="office" (ngModelChange)="filterResources()"
+              class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full">
+              <ng-container *ngIf="clientSelected !== undefined && clientSelected !== null">
+                <option [value]="''">Todos</option>
+                <option [ngValue]="office.name" *ngFor="let office of clientSelected.offices">
+                  {{office.name}}
+                </option>
+              </ng-container>
+            </select>
+          </div>
+        </div>
+
+        <div class="flex flex-col sm:flex-row w-full">
+          <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-full sm:w-1/2">
+            <div class="w-1/2 mr-3">
+              <label class="text-gray-400" for="from">Desde:</label>
+              <input name="from" [(ngModel)]="from"
+                class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
+                type="date">
+            </div>
+            <div class="w-1/2">
+              <label class="text-gray-400" for="to">Hasta:</label>
+              <input name="to" [(ngModel)]="to"
+                class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
+                type="date">
+            </div>
+          </div>
+          <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-1/2">
+            <!-- Reference -->
+            <div>
+              <label class="text-gray-400" for="reference">Referencia:</label>
+              <input name="reference" [(ngModel)]="reference"
+                class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
+            </div>
+            <!-- Filter button -->
+            <div class="flex items-end">
+              <button class="btn-primary hover:bg-green-900 mx-5 xl:my-0" (click)="filterResources()">
+                <span>Filtrar</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End filters -->
+
+      <!-- Table -->
+      <table
         class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg overflow-x-scroll overflow-y-scroll">
         <thead>
           <tr>
@@ -26,17 +90,17 @@
           <ng-container *ngFor="let resource of (resources$|async); let i = index;">
             <tr [ngClass]="{'bg-gray-200': i % 2 === 0}" class="text-center">
               <td class="p-2">
-                <span *ngIf="resource.checkups.length">
-                  {{resource.checkups[resource.checkups.length-1].createdAt|date}}
+                <span *ngIf="resource.repairs.length">
+                  {{resource.repairs[resource.repairs.length-1].createdAt|date}}
                 </span>
-                <span *ngIf="!resource.checkups.length">
+                <span *ngIf="!resource.repairs.length">
                   ---
                 </span>
               </td>
-              <td class="p-2"> <span *ngIf="resource.checkups.length">
-                  {{calcDays(resource.checkups[resource.checkups.length-1].createdAt)}}
+              <td class="p-2"> <span *ngIf="resource.repairs.length">
+                  {{calcDays(resource.repairs[resource.repairs.length-1].createdAt)}}
                 </span>
-                <span *ngIf="!resource.checkups.length">
+                <span *ngIf="!resource.repairs.length">
                   0
                 </span>
               </td>
@@ -76,7 +140,16 @@
 
         </tbody>
       </table>
+      <!-- End Table -->
 
+
+      <!-- Loader -->
+      <div class="w-full justify-center h-96" *ngIf="loader$|async">
+        <app-loader></app-loader>
+      </div>
+      <!-- End loader -->
+
+      <!-- Pagination -->
       <div class="justify-end flex-row flex">
         Pag. {{page}}
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 outline-none focus:outline-none  mx-2" fill="none"
@@ -91,6 +164,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
         </svg>
       </div>
+      <!-- End pagination -->
 
     </div>
     <!-- End Resource Table Desktop only -->
