--- a/src/app/maintenance/maintenance-history/maintenance-history.component.html
+++ b/src/app/maintenance/maintenance-history/maintenance-history.component.html
@@ -35,6 +35,7 @@
           </div>
         </div>
       </div>
+      <!-- End filters -->
 
       <table
         class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg overflow-x-scroll overflow-y-scroll">
